2020-05-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: Remove xalloc from libutils_modules.
	* libutils/pk-utils.c (pk_str_concat): Use malloc instead of xmalloc.

2020-05-05  Tim Rühsen  <tim.ruehsen@gmx.de>

	* .gitignore: Add /gl-libpoke.
	* Makefile.am: Add gl-libpoke to SUBDIRS.
	* bootstrap.conf: Invoke gnulib-tool to generate gl-libpoke.
	Cleanup gnulib module lists.
	Remove --lgpl=3 from gnulib-tool invocation.
	* configure.ac: Add m4/libpoke to AC_CONFIG_MACRO_DIRS.
	Add libpoke_EARLY.
	Add gl-libpoke/Makefile to AC_CONFIG_FILES.
	* libpoke/Makefile.am: Use gl-libpoke/libgnu.la in libpoke_la_LIBADD.

2020-05-05  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* bootstrap.conf: libutils is GPLv3+.

2020-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (libutils_modules): Add xalloc.

2020-05-05  Tim Rühsen  <tim.ruehsen@gmx.de>

	* .gitignore: Add /gl-libutils.
	* Makefile.am: Add gl-libutils to SUBDIRS.
	* bootstrap.conf: Invoke gnulib-tool to generate gl-libutils.
	* configure.ac: Add m4/libutils to AC_CONFIG_MACRO_DIRS.
	Add libutils_EARLY.
	Add gl-libutils/Makefile to AC_CONFIG_FILES.
	* libutils/Makefile.am: Use gl-libutils/libgnu.la in libutils_la_LIBADD.

2020-05-05  Darshit Shah  <darnir@gnu.org>

  * poke/Makefile.am: Merge two ifdef blocks into one. (Purely cosmetic)

2020-05-05  Darshit Shah  <darnir@gnu.org>

  * m4/libtextstyle-hyperlink.m4: Use an action-if-true to prevent adding it to LIBS
  AC_SEARCH_LIBS will add the library to LIBS if action-if-true is empty.
  We prevent that by adding an action-if-true, and manually including
  LTLIBTEXTSTYLE in the libraries for Poke. This allows libpoke.so to be
  build without linking against libtextstle.

2020-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (complete_struct): Add parentheses in
	expression to avoid a compiler warning.

2020-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/future/bson.pk: Minor fixes.
